--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,6 @@
 registry=https://registry.npmmirror.com
+
+# pnpm 配置
+# shamefully-hoist=true
+auto-install-peers=true
+strict-peer-dependencies=false
