--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "type": "commonjs",
   "devDependencies": {
     "@types/vue": "^2.0.0",
+    "markdown-it-mathjax3": "^4.3.2",
     "vitepress": "^2.0.0-alpha.15"
   },
   "dependencies": {
